DOC: Fix some design issues
STY: Move sections to #content wrapper

STY: Apply max-width to #content instead of <section>

STY: Add .content-wrapper class to #content

STY: Use the same padding for <main> contents

STY: Set equal margin for .content-wrapper contents

STY: Set a sans-serif font for <body>

STY: Reduce font to a 100%

STY: Remove #contentinfo top margin

STY: Add a max-height to .table-wrapper

STY: Remove extra margin on <h1> heading

STY: Replace #banner's margin with #home's margin

STY: Remove 10% margin; use padding on section > header instead

Revert "STY: Replace #banner's margin with #home's margin"

This reverts commit 4fe765f63e27b60c8ac0ff20df385f8779b8a432.

STY: Remove .content-wrapper from #content

Add more padding on small screens.

STY: Add more padding to caption, figcaption

STY: Add negative margin to some elements on small screens

STY: Change #contentinfo color

STY: Move #contentinfo to the left on small screens

STY: Reduce padding on small screens

STY: Show #banner on small screens

STY: Change fallback fonts for headings

Use sans-serif.

--- a/docs/static/non-versioned/css/justjs.css
+++ b/docs/static/non-versioned/css/justjs.css
@@ -21,21 +21,21 @@ html {
 
 body {
 	line-height: 1.8;
-	font-family: 'DejaVu Sans Mono', 'Liberation Mono', 'Consolas', 'Ubuntu Mono', 'Courier New', 'andale mono', 'lucida console', 'SpaceMono', monospace;
+	font-family: helvetica, arial, sans-serif;
 	text-align: left;
-	font-size: 125%;
+	font-size: 100%;
 	overflow-x: hidden;
 	max-width: 1920px;
 	margin: auto;
 }
 
-h1, h2, h3, h4, h5, h6, figcaption, caption, th, code { letter-spacing: unset; font-family: 'SpaceMono', 'Courier New', monospace; font-weight: bolder; }
+h1, h2, h3, h4, h5, h6, figcaption, caption, th, code { letter-spacing: unset; font-family: 'SpaceMono', helvetica, arial, sans-serif; font-weight: bolder; }
 h1, h2 { font-size: 2.15em; }
 h3, h4 { font-size: 1.25em; }
 
 dfn,
 nav a {
-	font-family: 'SpaceMono', 'Courier New', monospace;
+	font-family: 'SpaceMono', helvetica, arial, sans-serif;
 	font-style: normal;
 }
 
@@ -67,19 +67,14 @@ td, th {
 }
 
 section {
-	padding: 5em 5% 0 5%;
-	margin: auto;
 	width: 100%;
 	box-sizing: border-box;
+	padding: 2em;
 }
 
 section > header {
-	margin-bottom: 10%;
-}
-
-h3, h4 {
-	margin-top: 3em;
-	margin-bottom: 1em !important;
+	padding-top: 4em; /* visible on scrollIntoView() */
+	margin-bottom: 2rem;
 }
 
 figure {
@@ -92,7 +87,7 @@ figure {
 caption,
 figcaption {
 	text-align: left;
-	margin-bottom: 1em;
+	margin-bottom: 2em;
 }
 
 code {
@@ -103,8 +98,8 @@ code {
 	display: table;
 }
 
-dl > div {
-	margin-top: 2em;
+dl > div:not(:last-child) {
+	margin-bottom: 2rem;
 }
 
 pre {
